kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    otus: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      otus: homework
  template:
    metadata:
      labels:
        otus: homework
    spec:
      nodeSelector: 
        homework: "true"

      containers:
        - name: nginx
          image: nginx:1.29.0-alpine
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 2
          ports:
            - containerPort: 8000
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "rm -rf /homework/*"]
          volumeMounts:
            - name: homework-vol
              mountPath: /homework
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
            - name: new-cm
              mountPath: /homework/conf

      volumes:
        - name: homework-vol
          persistentVolumeClaim:
            claimName: init-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf
        - name: new-cm
          configMap:
            name: new-cm
            items:
              - key: key1.html
                path: key1.html
              - key: key2.html
                path: key2.html
