kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: nginx-service
spec:
  selector:
    otus: homework 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
